<resources>
    <string name="app_name">MyFirstGame</string>

    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>

    <string name="profile_username">Donald J. Trump</string>
    <string name="profile_at">\@DonalTrump</string>
    <string name="profile_buy">Buy</string>
    <string name="profile_contact">Contact</string>

    <string name="profile_like">Like</string>
    <string name="profile_share">Share</string>
    <string name="profile_save">Save</string>

</resources>
