<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="fr.cci.myfirstgame.MainMenuActivity">

    <Button
        android:id="@+id/btn_main_menu_play"
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_main_menu_profile"
        android:text="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onProfileClick"/>
    <Button
        android:id="@+id/btn_main_menu_settings"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_main_menu_credits"
        android:text="@string/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
