<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_profile_background"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_profile_background" />

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/iv_profile_background"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_profile_picture" />

    <TextView
        android:theme="Border"
        android:text="@string/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_official"
        android:drawablePadding="4dp"
        android:layout_alignTop="@+id/iv_profile_picture"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:layout_toEndOf="@+id/iv_profile_picture"
        android:layout_marginLeft="17dp"
        android:textColor="#000000"
        android:id="@+id/tv_profile_username" />


    <TextView
        android:text="@string/profile_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_profile_picture"
        android:layout_toEndOf="@+id/iv_profile_picture"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="3dp"
        android:layout_below="@id/tv_profile_username"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/tv_profile_at" />

    <LinearLayout
        android:id="@+id/ll_profile_buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_profile_picture"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="19dp">

        <Button
            android:text="@string/profile_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:backgroundTint="#4267B2"
            android:layout_marginRight="4dp"
            android:layout_weight="1" />

        <Button
            android:text="@string/profile_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:textColor="#4267B2"
            android:layout_marginLeft="4dp"
            android:backgroundTint="@android:color/transparent"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/profile_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_profile_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:drawableTop="@drawable/ic_share"
        android:textColor="@android:color/darker_gray"
        android:textAllCaps="false"
        android:id="@+id/btn_profile_share" />
    <Button
        android:text="@string/profile_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_profile_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:drawableTop="@drawable/ic_like"
        android:textColor="@android:color/darker_gray"
        android:textAllCaps="false"
        android:layout_toLeftOf="@id/btn_profile_share"
        android:id="@+id/btn_profile_like" />

    <Button
        android:text="@string/profile_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_profile_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:drawableTop="@drawable/ic_save"
        android:textColor="@android:color/darker_gray"
        android:textAllCaps="false"
        android:layout_toRightOf="@id/btn_profile_share"
        android:id="@+id/btn_profile_save" />
</RelativeLayout>